--- a/project-frontend/browser/index.html
+++ b/project-frontend/browser/index.html
@@ -21,5 +21,5 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <app-root></app-root>
-  <link rel="modulepreload" href="chunk-ZD6IZDDJ.js"><link rel="modulepreload" href="chunk-W7YCOLRM.js"><link rel="modulepreload" href="chunk-34MFIUHM.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-DY4EVARU.js" type="module"></script></body>
+  <link rel="modulepreload" href="chunk-Y2TALVLX.js"><link rel="modulepreload" href="chunk-W7YCOLRM.js"><link rel="modulepreload" href="chunk-34MFIUHM.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-TDXPKOEV.js" type="module"></script></body>
 </html>
